<resources>
    <string name="app_name">IsusCorp</string>
    <string name="user_label">User</string>
    <string name="isuscorp_image">IsusCorp Image</string>
    <string name="password_label">Password</string>
    <string name="login_text">Login</string>
    <string name="text_to_registrer">I don\'t have an account, <b>Sign up</b></string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="frist_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="password_label_repeat">Repeat Password</string>
    <string name="add_user">Add User</string>
    <string name="registrer">Sign up</string>
    <string name="no_macht">The password does not match</string>
    <string name="not_empty">This field cannot be empty</string>
    <string name="dialog_login">Login</string>
    <string name="error_login">Incorrect username and password</string>
    <string name="dashboard">Dashboard</string>
    <string name="calendar">Calendar</string>
    <string name="add_tickets_button">add tickets button</string>
    <string name="view_ticket">View Ticket</string>
    <string name="no_tickets_string">No ticket to display, to add a ticket click (+)</string>
    <string name="clientname">Client Name</string>
    <string name="set_date">schedule date</string>
    <string name="client_phone">Client Phone</string>
    <string name="ticket_address">Ticket Address</string>
    <string name="add_ticket">Add Ticket</string>
    <string name="get_directions">Get Directions</string>
    <string name="resume">Resume</string>
    <string name="ticket_details">Work ticket</string>
    <string name="delete">delete</string>
    <string name="update">update</string>
    <string name="delete_ticket">Delete Ticket</string>
    <string name="message_delete_ticket">Are you sure you want to delete the ticket?</string>
    <string name="information">Information</string>
    <string name="message_update">Are you sure you want to update the ticket?</string>
    <string name="edit_ticket">Edit Ticket</string>
    <string name="dialog_event">Events</string>
    <string name="no_tickets_event">There are no events in the calendar</string>
</resources>